src/migration/snapshots/inara__migration__tests__snapshot_alter_column_set_not_null.snap
---
source: src/migration/mod.rs
expression: sql
---
ALTER TABLE users ALTER COLUMN email SET NOT NULL;
