src/migration/snapshots/inara__migration__tests__snapshot_alter_column_type.snap
---
source: src/migration/mod.rs
expression: sql
---
ALTER TABLE users ALTER COLUMN age TYPE bigint USING age::bigint;
