src/migration/snapshots/inara__migration__tests__snapshot_create_table.snap
---
source: src/migration/mod.rs
expression: sql
---
CREATE TABLE users (
    id uuid NOT NULL,
    email text NOT NULL,
    created_at timestamptz NOT NULL DEFAULT now(),
    CONSTRAINT users_pkey PRIMARY KEY (id),
    CONSTRAINT users_email_key UNIQUE (email)
);
