src/migration/snapshots/inara__migration__tests__snapshot_drop_constraint.snap
---
source: src/migration/mod.rs
expression: sql
---
ALTER TABLE posts DROP CONSTRAINT posts_author_fk;
