src/migration/snapshots/inara__migration__tests__snapshot_multi_table_migration.snap
---
source: src/migration/mod.rs
expression: sql
---
CREATE TABLE users (
    id uuid NOT NULL,
    email text NOT NULL,
    created_at timestamptz NOT NULL DEFAULT now(),
    CONSTRAINT users_pkey PRIMARY KEY (id),
    CONSTRAINT users_email_key UNIQUE (email)
);

CREATE TABLE posts (
    id uuid NOT NULL,
    author_id uuid NOT NULL,
    title text NOT NULL,
    body text,
    created_at timestamptz NOT NULL DEFAULT now(),
    CONSTRAINT posts_pkey PRIMARY KEY (id),
    CONSTRAINT posts_author_fk FOREIGN KEY (author_id) REFERENCES users(id) ON DELETE CASCADE
);
CREATE INDEX posts_author_idx ON posts (author_id);
